// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectSortBy routing getWidgetSearchParameters should add the refinements according to the UI state provided 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [],
  "disjunctiveFacetsRefinements": Object {},
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "index": "other",
  "numericRefinements": Object {},
  "tagRefinements": Array [],
}
`;

exports[`connectSortBy routing getWidgetSearchParameters should enforce the default value 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [],
  "disjunctiveFacetsRefinements": Object {},
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "index": "relevance",
  "numericRefinements": Object {},
  "tagRefinements": Array [],
}
`;

exports[`connectSortBy routing getWidgetState should add an entry equal to the refinement 1`] = `
Object {
  "sortBy": "priceASC",
}
`;
